@@ -51,113 +51,117 @@ libcvl_la_SOURCES = cvl_intern.h \
 	cvl_visualization.c
 
 nodist_libcvl_la_SOURCES = \
-	glsl/color/lum_to_rgb.glsl.h		\
-	glsl/color/lum_to_xyz.glsl.h		\
-	glsl/color/rgb_to_lum.glsl.h		\
-	glsl/color/rgb_to_xyz.glsl.h		\
-	glsl/color/xyz_to_rgb.glsl.h		\
-	glsl/color/rgb_to_hsl.glsl.h		\
-	glsl/color/hsl_to_rgb.glsl.h		\
-	glsl/color/channel_combine.glsl.h	\
-	glsl/color/channel_extract.glsl.h	\
-	glsl/color/invert.glsl.h		\
-	glsl/color/gamma_correct.glsl.h		\
-	glsl/color/color_adjust.glsl.h		\
-	glsl/color/transform_linear.glsl.h	\
-	glsl/color/transform_log.glsl.h		\
-	glsl/color/luminance_range.glsl.h	\
-	glsl/color/pseudo_color.glsl.h		\
-	glsl/color/threshold.glsl.h		\
-	glsl/transform/bilinear.glsl.h		\
-	glsl/transform/biquadratic.glsl.h	\
-	glsl/transform/bicubic.glsl.h		\
-	glsl/math/add.glsl.h			\
-	glsl/math/mul.glsl.h			\
-	glsl/math/first_derivative.glsl.h	\
-	glsl/math/laplacian.glsl.h		\
-	glsl/mix/layer.glsl.h			\
-	glsl/mix/blend.glsl.h			\
-	glsl/mix/mix.glsl.h			\
-	glsl/filter/convolve.glsl.h		\
-	glsl/filter/convolve_separable.glsl.h	\
-	glsl/filter/convolve3d.glsl.h		\
-	glsl/filter/convolve3d_separable.glsl.h	\
-	glsl/filter/min.glsl.h			\
-	glsl/filter/min3d.glsl.h		\
-	glsl/filter/max.glsl.h			\
-	glsl/filter/max3d.glsl.h		\
-	glsl/filter/median.glsl.h		\
-	glsl/filter/median3d.glsl.h		\
-	glsl/filter/median_separated.glsl.h	\
-	glsl/filter/median3d_separated.glsl.h	\
-	glsl/filter/laplace.glsl.h		\
-	glsl/filter/unsharpmask.glsl.h		\
-	glsl/misc/resize_seq.glsl.h		\
-	glsl/misc/reduce.glsl.h			\
-	glsl/misc/sort.glsl.h			\
-	glsl/misc/pyramid_gaussian.glsl.h	\
-	glsl/features/sobel.glsl.h		\
-	glsl/features/canny_nms.glsl.h		\
-	glsl/features/canny_hysterese1.glsl.h	\
-	glsl/features/canny_hysterese2.glsl.h	\
-	glsl/hdr/tonemap_drago03.glsl.h		\
-	glsl/hdr/tonemap_durand02_step1.glsl.h	\
-	glsl/hdr/tonemap_durand02_step2.glsl.h	\
+	glsl/color/lum_to_rgb.glsl.h				\
+	glsl/color/lum_to_xyz.glsl.h				\
+	glsl/color/rgb_to_lum.glsl.h				\
+	glsl/color/rgb_to_xyz.glsl.h				\
+	glsl/color/xyz_to_rgb.glsl.h				\
+	glsl/color/rgb_to_hsl.glsl.h				\
+	glsl/color/hsl_to_rgb.glsl.h				\
+	glsl/color/channel_combine.glsl.h			\
+	glsl/color/channel_extract.glsl.h			\
+	glsl/color/invert.glsl.h				\
+	glsl/color/gamma_correct.glsl.h				\
+	glsl/color/color_adjust.glsl.h				\
+	glsl/color/transform_linear.glsl.h			\
+	glsl/color/transform_log.glsl.h				\
+	glsl/color/luminance_range.glsl.h			\
+	glsl/color/pseudo_color.glsl.h				\
+	glsl/color/threshold.glsl.h				\
+	glsl/transform/bilinear.glsl.h				\
+	glsl/transform/biquadratic.glsl.h			\
+	glsl/transform/bicubic.glsl.h				\
+	glsl/math/add.glsl.h					\
+	glsl/math/mul.glsl.h					\
+	glsl/math/first_derivative.glsl.h			\
+	glsl/math/laplacian.glsl.h				\
+	glsl/mix/layer.glsl.h					\
+	glsl/mix/blend.glsl.h					\
+	glsl/mix/mix.glsl.h					\
+	glsl/filter/convolve.glsl.h				\
+	glsl/filter/convolve_separable.glsl.h			\
+	glsl/filter/convolve3d.glsl.h				\
+	glsl/filter/convolve3d_separable.glsl.h			\
+	glsl/filter/min.glsl.h					\
+	glsl/filter/min3d.glsl.h				\
+	glsl/filter/max.glsl.h					\
+	glsl/filter/max3d.glsl.h				\
+	glsl/filter/median.glsl.h				\
+	glsl/filter/median3d.glsl.h				\
+	glsl/filter/median_separated.glsl.h			\
+	glsl/filter/median3d_separated.glsl.h			\
+	glsl/filter/laplace.glsl.h				\
+	glsl/filter/unsharpmask.glsl.h				\
+	glsl/misc/resize_seq.glsl.h				\
+	glsl/misc/reduce.glsl.h					\
+	glsl/misc/sort.glsl.h					\
+	glsl/misc/pyramid_gaussian.glsl.h			\
+	glsl/features/sobel.glsl.h				\
+	glsl/features/canny_nms.glsl.h				\
+	glsl/features/canny_hysterese1.glsl.h			\
+	glsl/features/canny_hysterese2.glsl.h			\
+	glsl/hdr/tonemap_drago03.glsl.h				\
+	glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl.h	\
+	glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl.h	\
+	glsl/hdr/tonemap_durand02_step1.glsl.h			\
+	glsl/hdr/tonemap_durand02_step2.glsl.h			\
 	glsl/visualization/vector2_color.glsl.h
 
 EXTRA_DIST = cvl/cvl_version.h.in \
-	glsl/color/lum_to_rgb.glsl		\
-	glsl/color/lum_to_xyz.glsl		\
-	glsl/color/rgb_to_lum.glsl		\
-	glsl/color/rgb_to_xyz.glsl		\
-	glsl/color/xyz_to_rgb.glsl		\
-	glsl/color/rgb_to_hsl.glsl		\
-	glsl/color/hsl_to_rgb.glsl		\
-	glsl/color/channel_combine.glsl		\
-	glsl/color/channel_extract.glsl		\
-	glsl/color/invert.glsl			\
-	glsl/color/gamma_correct.glsl		\
-	glsl/color/color_adjust.glsl		\
-	glsl/color/transform_linear.glsl	\
-	glsl/color/transform_log.glsl		\
-	glsl/color/luminance_range.glsl		\
-	glsl/color/pseudo_color.glsl		\
-	glsl/color/threshold.glsl		\
-	glsl/transform/bilinear.glsl		\
-	glsl/transform/biquadratic.glsl		\
-	glsl/transform/bicubic.glsl		\
-	glsl/math/add.glsl			\
-	glsl/math/mul.glsl			\
-	glsl/math/first_derivative.glsl		\
-	glsl/math/laplacian.glsl		\
-	glsl/mix/blend.glsl			\
-	glsl/mix/layer.glsl			\
-	glsl/mix/mix.glsl			\
-	glsl/filter/convolve.glsl		\
-	glsl/filter/convolve_separable.glsl	\
-	glsl/filter/convolve3d.glsl		\
-	glsl/filter/convolve3d_separable.glsl	\
-	glsl/filter/min.glsl			\
-	glsl/filter/min3d.glsl			\
-	glsl/filter/max.glsl			\
-	glsl/filter/max3d.glsl			\
-	glsl/filter/median.glsl			\
-	glsl/filter/median3d.glsl		\
-	glsl/filter/median_separated.glsl	\
-	glsl/filter/median3d_separated.glsl	\
-	glsl/filter/laplace.glsl		\
-	glsl/filter/unsharpmask.glsl		\
-	glsl/misc/resize_seq.glsl		\
-	glsl/misc/reduce.glsl			\
-	glsl/misc/sort.glsl			\
-	glsl/misc/pyramid_gaussian.glsl		\
-	glsl/features/sobel.glsl		\
-	glsl/features/canny_nms.glsl		\
-	glsl/features/canny_hysterese1.glsl	\
-	glsl/features/canny_hysterese2.glsl	\
-	glsl/hdr/tonemap_drago03.glsl		\
-	glsl/hdr/tonemap_durand02_step1.glsl	\
-	glsl/hdr/tonemap_durand02_step2.glsl	\
+	glsl/color/lum_to_rgb.glsl				\
+	glsl/color/lum_to_xyz.glsl				\
+	glsl/color/rgb_to_lum.glsl				\
+	glsl/color/rgb_to_xyz.glsl				\
+	glsl/color/xyz_to_rgb.glsl				\
+	glsl/color/rgb_to_hsl.glsl				\
+	glsl/color/hsl_to_rgb.glsl				\
+	glsl/color/channel_combine.glsl				\
+	glsl/color/channel_extract.glsl				\
+	glsl/color/invert.glsl					\
+	glsl/color/gamma_correct.glsl				\
+	glsl/color/color_adjust.glsl				\
+	glsl/color/transform_linear.glsl			\
+	glsl/color/transform_log.glsl				\
+	glsl/color/luminance_range.glsl				\
+	glsl/color/pseudo_color.glsl				\
+	glsl/color/threshold.glsl				\
+	glsl/transform/bilinear.glsl				\
+	glsl/transform/biquadratic.glsl				\
+	glsl/transform/bicubic.glsl				\
+	glsl/math/add.glsl					\
+	glsl/math/mul.glsl					\
+	glsl/math/first_derivative.glsl				\
+	glsl/math/laplacian.glsl				\
+	glsl/mix/blend.glsl					\
+	glsl/mix/layer.glsl					\
+	glsl/mix/mix.glsl					\
+	glsl/filter/convolve.glsl				\
+	glsl/filter/convolve_separable.glsl			\
+	glsl/filter/convolve3d.glsl				\
+	glsl/filter/convolve3d_separable.glsl			\
+	glsl/filter/min.glsl					\
+	glsl/filter/min3d.glsl					\
+	glsl/filter/max.glsl					\
+	glsl/filter/max3d.glsl					\
+	glsl/filter/median.glsl					\
+	glsl/filter/median3d.glsl				\
+	glsl/filter/median_separated.glsl			\
+	glsl/filter/median3d_separated.glsl			\
+	glsl/filter/laplace.glsl				\
+	glsl/filter/unsharpmask.glsl				\
+	glsl/misc/resize_seq.glsl				\
+	glsl/misc/reduce.glsl					\
+	glsl/misc/sort.glsl					\
+	glsl/misc/pyramid_gaussian.glsl				\
+	glsl/features/sobel.glsl				\
+	glsl/features/canny_nms.glsl				\
+	glsl/features/canny_hysterese1.glsl			\
+	glsl/features/canny_hysterese2.glsl			\
+	glsl/hdr/tonemap_drago03.glsl				\
+	glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl		\
+	glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl		\
+	glsl/hdr/tonemap_durand02_step1.glsl			\
+	glsl/hdr/tonemap_durand02_step2.glsl			\
 	glsl/visualization/vector2_color.glsl
 
 BUILT_SOURCES = $(nodist_libcvl_la_SOURCES)
